[package]
name = "raw-input"
version = "0.0.1-alpha.0"
edition = "2024"
authors = ["Lete114 <me@imlete.cn>"]
description = "A cross-platform library for capturing raw keyboard and mouse events with status-based subscriber management."

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lete114/raw-input"
keywords = [
    "grab",
    "listen",
    "display",
    "simulate",
    "input",
    "mouse",
    "testing",
    "keyboard",
    "automation",
    "intercept",
    "hook",
]
categories = [
    "development-tools::testing",
    "api-bindings",
    "hardware-support",
    "automation",
]

[features]
default = []
serialize = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1.21.3"
dashmap = "6.1.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
] }

[dev-dependencies]
dpi = "0.1.2"
serial_test = "3.2.0"
