[package]
name = "raw-input"
version = "0.0.1-alpha.2"
edition = "2024"
authors = ["Lete114 <me@imlete.cn>"]
description = "A cross-platform library for capturing and simulating global input events (keyboard and mouse)."

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lete114/raw-input"
keywords = ["input", "grab", "listen", "mouse", "keyboard"]
categories = ["development-tools", "api-bindings", "hardware-support", "os"]

[features]
default = []
serialize = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1.21.3"
dashmap = "6.1.0"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", features = ["highsierra"] }
core-foundation = { version = "0.10.1" }
objc2 = { version = "0.6.3" }
objc2-foundation = { version = "0.3", default-features = false, features = [] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "objc2-core-foundation",
    "NSGraphics",
    "NSScreen",
] }

[dev-dependencies]
dpi = "0.1.2"
serial_test = "3.2.0"
